# Rust-Imageboards

./: README.md
claire000/: Cargo.toml
claire000/src/: handlers.rs  models.rs  templates.rs
claire000/src/templates/: board.html
claire000/static/: style.css
claire000/templates/: board.html  thread.html
imageboard0/: Cargo.toml  README.md
imageboard0/src/: main.rs
imageboard1/: README.md
imageboard1/src/: main.rs  templates.rs
imageboard1/templates/: index.html  thread.html
imageboard2/: Cargo.toml  README.md
imageboard2/src/: main.rs  templates.rs
imageboard2/templates/: index.html  post_form.html  thread.html
imageboard3/: Cargo.toml  readme.md
imageboard3/src/: main.rs  templates.rs
imageboard3/templates/: board.html  post_form.html
imageboard4/: readme.md
imageboard4/src/: main.rs  templates.rs
imageboard4/static/: index.html
imageboard4/templates/: board.html  thread.html
imageboard5/: readme.md
imageboard5/chess/: read.txt
imageboard5/src/: main.rs  templates.rs
imageboard5/templates/: thread.html
imageboard6/: all.bat  readme.md
imageboard6/src/: main.rs  models.rs
imageboard6/src/templates/: board.html  thread.html
imageboard6/templates/: board.html  thread.html
imageboard7/: Cargo.toml  readme.md
imageboard7/src/: handlers.rs  main.rs  models.rs  templates.rs
imageboard7/static/: style.css
imageboard7/templates/: thread.html
imageboard8/: Cargo.toml  all.bat
imageboard8/src/: models.rs
imageboard8/src/templates/: board.html  error.html  thread.html
imageboard8/templates/: board.html
imageboard9/: all.bat
imageboard9/src/: boards.rs  handlers.rs  main.rs  models.rs  templates.rs
imageboard9/static/: landing.html  style.css
imageboard9/templates/: board.html  thread.html
