[package]
name    = "chessboard"
version = "0.1.0"
edition = "2024"          # keep your original choice

[dependencies]
actix-files      = "0.6"
actix-web        = "4.11.0"
actix-multipart  = "0.7.2"
futures-util     = "0.3.31"

r2d2             = "0.8"
r2d2_sqlite      = { version = "0.25", default-features = false, features = ["bundled"] }
rusqlite         = { version = "0.32", features = ["bundled"] }
serde            = { version = "1.0.219", features = ["derive"] }
chrono           = { version = "0.4.41", features = ["serde"] }
uuid             = { version = "1.17.0", features = ["v4"] }
infer            = "0.15"
html-escape      = "0.2.13"

askama           = "0.14.0"
askama_web       = { version = "0.14.3", features = ["actix-web-4"] }

# new diagnostics / config
log              = "0.4"
env_logger       = "0.11"
config           = "0.14"
