[package]
name = "chess"
version = "0.1.0"
edition = "2021"
description = "A minimal imageboard/message board for chess discussion, inspired by TinyIB, written in Rust"

[dependencies]
axum = { version = "0.8.4", features = ["multipart"] }
tokio = { version = "1.45.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
askama = "0.14.0"
uuid = { version = "1.17.0", features = ["v4"] }
tower = "0.5.2"
mime_guess = "2.0.5"
once_cell = "1.19.0"
tower-http = { version = "0.5.2", features = ["fs"] }
mysql = "24.0"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"  